# Discord-UrsaMixer

./: .gitignore  README.md  requirements.txt  setup.cfg
designer_plugins/: guilds_plugin.py  tracks_plugin.py  vradioview_plugin.py
ursa/: PhasedContext.py  __main__.py  parser_module.py  playlist.py  session.py  track.py  ursa_config.py
ursa/DMCI/: __init__.py  roller.py
ursa/discord/: client.py
ursa/interface/: guild_dock.py  main_window.py  tracks_dock.py  vradioview.py
ursa/models/: __init__.py  guilds.py  tracks.py
ursa/ui/: character_sheet_coc.ui  character_sheet_dnd.ui  dice_dock.ui  generate_ui.sh  guild_dock.ui  main_window.ui  pipe_dock.ui  tracks_dock.ui  vradioview.ui
