[metadata]
name = ursa
version = 0.1.3

[options]
packages =
    ursa
    ursa/discord
    ursa/DMCI
    ursa/interface
    ursa/models
    ursa/ui
install_requires =
    pydantic-settings
    sounddevice
    discord
    PyQt5
    qasync

[options.entry_points]
console_scripts =
    ursa_ab = ursa.__main__:main